# coherent-speech

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pipeline.py  pyproject.toml  requirements-gpu.txt  requirements.in  requirements.txt  run.sh  streamlit_app.py  tts_manager.py
.streamlit/: config.toml
