[project]
name = "coherent-speech"
version = "1.0.0"
description = "Enterprise-grade AI tool to automatically transcribe, clean, and restore damaged, garbled, or low-volume audio."
authors = [{name = "Aniket Tuli"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "faster-whisper>=1.0.0",
    "kokoro>=0.3.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "ffmpeg-python>=0.2.0",
    "torchvision>=0.18.0",
    "f5-tts>=0.1.0",
    "pytest>=8.0.0"
]

[project.optional-dependencies]
gpu = [
    "nvidia-npp-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
